--- a/GS/cadastrarOrganizador.html
+++ b/GS/cadastrarOrganizador.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/estiloXL.css">
     <link rel="stylesheet" href="css/estiloXS.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
-    <title>Cadastrar Doador</title>
+    <title>Cadastrar Organização</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                                     conta
                                 </a>
                                 <div>
-                                    <a href="cadastrarDoador" class="cadastre-se">ou cadastre-se grátis</a>
+                                    <a href="cadastrarDoador.html" class="cadastre-se">ou cadastre-se grátis</a>
                                 </div>
                             </li>
                             <li>
@@ -120,17 +120,21 @@
                         </div>
                         <input type="file" name="carregarImagem" id="carregarImagem" accept="image/*">
                     </div>
-                    <label for="txtNome">Nome Completo</label>
+                    <label for="txtRazaoSocial">Razão Social</label>
                     <br>
-                    <input type="text" name="txtNome" id="txtNome">
+                    <input type="text" name="txtRazaoSocial" id="txtRazaoSocial">
                     <br>
                     <label for="txtEmail">E-mail</label>
                     <br>
                     <input type="text" name="txtEmail" id="txtEmail">
                     <br>
-                    <label for="txtCPF">CPF</label>
+                    <label for="txtCNPJ">CNPJ</label>
                     <br>
-                    <input type="text" name="txtCPF" id="txtCPF">
+                    <input type="text" name="txtCNPJ" id="txtCNPJ">
+                    <br>
+                    <label for="txtRamo">Ramo de Atuação</label>
+                    <br>
+                    <input type="text" name="txtRamo" id="txtRamo">
                     <br>
                     <label for="txtTelefone">Telefone</label>
                     <br>
