--- a/GS/esqueciSenha.html
+++ b/GS/esqueciSenha.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estiloMD.css">
     <link rel="stylesheet" href="css/estiloXL.css">
     <link rel="stylesheet" href="css/estiloXS.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <title>Redefinir Senha</title>
 </head>
 
@@ -29,7 +30,7 @@
                                     conta
                                 </a>
                                 <div>
-                                    <a href="cadastrar.html" class="cadastre-se">ou cadastre-se grátis</a>
+                                    <a href="cadastrarDoador.html" class="cadastre-se">ou cadastre-se grátis</a>
                                 </div>
                             </li>
                             <li>
@@ -39,12 +40,12 @@
                             </li>
                             <li>
                                 <a href="cadastrarCampanhas.html">
-                                    <img src="images/mapa.png" alt="Ícone de folhinha" class="icon">Cadastrar Campanha
+                                    <img src="images/folhinha.png" alt="Ícone de folhinha" class="icon">Cadastrar Campanha
                                 </a>
                             </li>
                             <li>
                                 <a href="sobreEmpresas.html">
-                                    <img src="images/reportar.png" alt="Ícone de maleta para informações de Empresas Parceiras"
+                                    <img src="images/parceria.png" alt="Ícone de mão dadas para informações de Empresas Parceiras"
                                         class="icon">Empresas Parceiras
                                 </a>
                             </li>
@@ -56,7 +57,7 @@
                             </li>
                             <li>
                                 <a href="faq.html">
-                                    <img src="images/falar.png" alt="Ícone para FAQ" class="icon">FAQ
+                                    <img src="images/faq.png" alt="Ícone para FAQ" class="icon">FAQ
                                 </a>
                             </li>
                             <li>
@@ -69,7 +70,7 @@
                 </nav>
             </div>
             <div class="logo">
-                <a href="painelDeCampanhas.html">
+                <a href="home.html">
                     <img src="images/logo_verde.png" alt="logo">
                 </a>
             </div>
@@ -81,7 +82,7 @@
                     </section>
                     <div class="linksCabecalhoIcones">
                         <a href="#"><img src="images/lupa.png" alt="lupa" class="lupa" id="search-icon"></a>
-                        <a href="atualizarCadastro.html"><img src="images/usuario_branco.png" alt="perfil"
+                        <a href="verPerfil.html"><img src="images/usuario_branco.png" alt="perfil"
                                 class="perfil"></a>
                     </div>
                 </div>
@@ -106,7 +107,7 @@
                         <br>
                         <a href="login.html">ACESSE A SUA CONTA</a>
                         <br>
-                        <a href="mapaMetro.html">PAINEL DE CAMPANHAS</a>
+                        <a href="painelDeCampanhas.html">PAINEL DE CAMPANHAS</a>
                     </div>
                     <div id ="pt2">
                         <a href="sobreEmpresas.html">EMPRESAS PARCEIRAS</a>
