--- a/GS/verPerfil.html
+++ b/GS/verPerfil.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/estiloXL.css">
     <link rel="stylesheet" href="css/estiloXS.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
-    <title>Login</title>
+    <title>Perfil</title>
 </head>
 
 <body>
@@ -90,52 +90,47 @@
         </div>
     </header>
         <main>
+            <div class="botoesMenuHome">
+                <a href="home.html" class="botaoM">HOME</a>
+                <a href="painelDeCampanhas.html" class="botaoM botaoApoiar">APOIAR</a>
+                <a href="sobreEmpresas.html" class="botaoM">EMPRESAS PARCEIRAS</a>
+                <a href="integrantes.html" class="botaoM">INTEGRANTES</a>
+                <a href="faq.html" class="botaoM">FAQ</a>
+                <a href="login.html" class="botaoAtivado">
+                    <span id="linha1"><b>ACESSE SUA CONTA</b></span>
+                    <span id="linha2">OU CADASTRE-SE GRÁTIS</span>
+                </a>
+            </div>
             <div id="search-container">
                 <input type="text" id="search-input" placeholder="Digite sua busca..." />
                 <button id="search-button">Pesquisar</button>
-            </div>
-            <form name=frmLogin id="frmLogin" method="post" enctype="multipart/form-data">
-                <label for="txtUsuario">Usuário</label>
-                <br>
-                <input type="text" name="txtUsuario" id="txtUsuario" required placeholder="Digite seu usuário">
-                <br>
-                <label>Senha</label>
-                <br>
-                <input type="password" name="txtSenha" id="txtSenha" placeholder="Digite sua senha">
-                <br>
-            </form>
-            <div class="botoesLogin">
-                <a href="cadastrar.html" class="botaoCadastrar">Cadastrar</a>
-                <a href="painelDeCampanhas.html" class="botaoEntrar">Entrar</a>
-            </div>
-            <div id="esqueciSenha">
-                <a href="esqueciSenha.html">Esqueci minha senha...</a>
-            </div>
+            </div>    
+
         </main>
-    <footer id="rodape">
-        <div class="conteudoRodape">
-            <nav id="navRodape">
-                <div id="pt1">
-                    <a href="home.html">HOME</a>
-                    <br>
-                    <a href="login.html">ACESSE A SUA CONTA</a>
-                    <br>
-                    <a href="painelDeCampanhas.html">PAINEL DE CAMPANHAS</a>
-                </div>
-                <div id ="pt2">
-                    <a href="sobreEmpresas.html">EMPRESAS PARCEIRAS</a>
-                    <br>
-                    <a href="integrantes.html">INTEGRANTES</a>
-                    <br>
-                    <a href="faq.html">FAQ</a>
-                </div>
-                <div id="logoRodape">
-                    <img src ="images/logo_cinza.png" alt="logo"></a>
-                    <p id="copy">© Copyright 2024</p>
-                </div>
-            </nav>
-        </div>
-    </footer>
-</body>
-    <script src="js/script.js"></script>
-</html>
+        <footer id="rodape">
+            <div class="conteudoRodape">
+                <nav id="navRodape">
+                    <div id="pt1">
+                        <a href="home.html">HOME</a>
+                        <br>
+                        <a href="login.html">ACESSE A SUA CONTA</a>
+                        <br>
+                        <a href="painelDeCampanhas.html">PAINEL DE CAMPANHAS</a>
+                    </div>
+                    <div id ="pt2">
+                        <a href="sobreEmpresas.html">EMPRESAS PARCEIRAS</a>
+                        <br>
+                        <a href="integrantes.html">INTEGRANTES</a>
+                        <br>
+                        <a href="faq.html">FAQ</a>
+                    </div>
+                    <div id="logoRodape">
+                        <img src ="images/logo_cinza.png" alt="logo"></a>
+                        <p id="copy">© Copyright 2024</p>
+                    </div>
+                </nav>
+            </div>
+        </footer>
+    </body>
+        <script src="js/script.js"></script>
+    </html>
