--- a/GS/home.html
+++ b/GS/home.html
@@ -34,8 +34,13 @@
                                 </div>
                             </li>
                             <li>
+                                <a href="home.html">
+                                    <img src="images/home.png" alt="Ícone para o Home" class="icon">Home
+                                </a>
+                            </li>
+                            <li>
                                 <a href="painelDeCampanhas.html">
-                                    <img src="images/home.png" alt="Ícone para o Painel de Campanhas" class="icon">Painel de Campanhas
+                                    <img src="images/painel.png" alt="Ícone para o Painel de Campanhas" class="icon">Painel de Campanhas
                                 </a>
                             </li>
                             <li>
@@ -203,7 +208,7 @@
                         <a href="faq.html">FAQ</a>
                     </div>
                     <div id="logoRodape">
-                        <img src ="images/logo_cinza.png" alt="logo"></a>
+                        <img src ="images/logo_cinza.png" alt="logo">
                         <p id="copy">© Copyright 2024</p>
                     </div>
                 </nav>
