--- a/GS/sobreEmpresas.html
+++ b/GS/sobreEmpresas.html
@@ -34,8 +34,13 @@
                                 </div>
                             </li>
                             <li>
+                                <a href="home.html">
+                                    <img src="images/home.png" alt="Ícone para o Home" class="icon">Home
+                                </a>
+                            </li>
+                            <li>
                                 <a href="painelDeCampanhas.html">
-                                    <img src="images/home.png" alt="Ícone para o Painel de Campanhas" class="icon">Painel de Campanhas
+                                    <img src="images/painel.png" alt="Ícone para o Painel de Campanhas" class="icon">Painel de Campanhas
                                 </a>
                             </li>
                             <li>
@@ -105,7 +110,24 @@
                 <input type="text" id="search-input" placeholder="Digite sua busca..." />
                 <button id="search-button">Pesquisar</button>
             </div>    
-            <h3>Empresas Parceiras</h3>
+            <h3 id="tituloEmpresasParceiras">Empresas Parceiras</h3>
+            <div class="empresas">
+                <div class="empresa1">
+                    <a href="informacaoEmpresa1.html" class="botaoSobreEmpresa1">
+                        <img src ="images/sapLogo.png" alt="logo da Empresa SAP">
+                    </a>
+                </div>
+                <div class="empresa2">
+                    <a href="informacaoEmpresa2.html" class="botaoSobreEmpresa2">
+                        <img src ="images/fiaLogo.png" alt="logo da Empresa Fia">
+                    </a>
+                </div>
+                <div class="empresa3">
+                    <a href="informacaoEmpresa3.html">
+                        <img src ="images/ultragasLogo.png" alt="logo da Empresa Ultragas">
+                    </a>
+                </div>
+            </div>
         </main>
         <footer id="rodape">
             <div class="conteudoRodape">
@@ -125,7 +147,7 @@
                         <a href="faq.html">FAQ</a>
                     </div>
                     <div id="logoRodape">
-                        <img src ="images/logo_cinza.png" alt="logo"></a>
+                        <img src ="images/logo_cinza.png" alt="logo">
                         <p id="copy">© Copyright 2024</p>
                     </div>
                 </nav>
