--- a/GS/faq.html
+++ b/GS/faq.html
@@ -34,9 +34,13 @@
                                 </div>
                             </li>
                             <li>
+                                <a href="home.html">
+                                    <img src="images/home.png" alt="Ícone para o Home" class="icon">Home
+                                </a>
+                            </li>
+                            <li>
                                 <a href="painelDeCampanhas.html">
-                                    <img src="images/home.png" alt="Ícone para o Painel de Campanhas"
-                                        class="icon">Painel de Campanhas
+                                    <img src="images/painel.png" alt="Ícone para o Painel de Campanhas" class="icon">Painel de Campanhas
                                 </a>
                             </li>
                             <li>
@@ -163,9 +167,9 @@
                     <br>Crédito - Pagamentos do tipo crédito podem levar um tempo a mais para serem processados, e podem
                     ser parcelados a depender do valor! A transferência não pode exceder o valor da meta especificado
                     pela organização.<br>
-                    <br>Débito - Pagamentos do tipo débito são processados rapidamente e geralmente são recebidos no
-                    mesmo
-                    dia. O valor a ser transferido não pode exceder a meta especificada pela organização.
+                    <br>Boleto - podem levar alguns dias úteis para serem processados, dependendo da
+                    compensação bancária. O pagamento será confirmado após o processamento do banco, o que geralmente
+                    ocorre em até 3 dias úteis. O valor a ser pago deve estar dentro dos limites definidos pela organização.
                 </div>
             </div>
 
@@ -188,7 +192,7 @@
                     <a href="faq.html">FAQ</a>
                 </div>
                 <div id="logoRodape">
-                    <img src="images/logo_cinza.png" alt="logo"></a>
+                    <img src="images/logo_cinza.png" alt="logo">
                     <p id="copy">© Copyright 2024</p>
                 </div>
             </nav>
