--- a/GS/informacaoEmpresa1.html
+++ b/GS/informacaoEmpresa1.html
@@ -112,69 +112,71 @@
             <input type="text" id="search-input" placeholder="Digite sua busca..." />
             <button id="search-button">Pesquisar</button>
         </div>
-        <h3>Sobre a Empresa: SAP</h3>
+        <h3 id="tituloEmpresa">Sobre a Empresa: SAP</h3>
         <div id="infoEmpresaSap">
             <img src="images/sapLogo.png" alt="Logo da Sap" class="LogoDaSap">
-            <b>Razão Social:</b> SAP Brasil Tecnologia e Sistemas Ltda.<br>
-            <b>E-mail: </b>contato@sap.com.br<br>
-            <b>CNPJ: </b>12.345.678/0001-90<br>
-            <b>Telefone: </b> 0800 888 9988<br>
-            <b>Ramo de Atuação: </b>Tecnologia da Informação e Soluções Empresariais.<br>
-            <b>Endereço: </b>Avenida Paulista, 1000, 15º Andar, São Paulo, SP, Brasil.<br><br>
+            <div class="textoEmpresa">
+                <b>Razão Social:</b> SAP Brasil Tecnologia e Sistemas Ltda.<br>
+                <b>E-mail: </b>contato@sap.com.br<br>
+                <b>CNPJ: </b>12.345.678/0001-90<br>
+                <b>Telefone: </b> 0800 888 9988<br>
+                <b>Ramo de Atuação: </b>Tecnologia da Informação e Soluções Empresariais.<br>
+                <b>Endereço: </b>Avenida Paulista, 1000, 15º Andar, São Paulo, SP, Brasil.<br><br>
 
-            <b>Informações Gerais: </b><br><br>
+                <b>Informações Gerais: </b><br><br>
 
-            <p>A SAP é uma multinacional alemã especializada no
-                desenvolvimento de soluções de software corporativo, com foco em soluções para
-                gestão empresarial. Fundada em 1972, a SAP é líder global em soluções de Enterprise
-                Resource Planning (ERP), ajudando empresas de todos os tamanhos a otimizar seus
-                processos internos, reduzir custos e melhorar a eficiência por meio de sistemas
-                integrados e tecnologias inovadoras.</p>
+                <p>A SAP é uma multinacional alemã especializada no
+                    desenvolvimento de soluções de software corporativo, com foco em soluções para
+                    gestão empresarial. Fundada em 1972, a SAP é líder global em soluções de Enterprise
+                    Resource Planning (ERP), ajudando empresas de todos os tamanhos a otimizar seus
+                    processos internos, reduzir custos e melhorar a eficiência por meio de sistemas
+                    integrados e tecnologias inovadoras.</p><br>
 
-            <p>Com presença em mais de 180 países, a SAP transforma a maneira como as organizações
-                operam ao fornecer soluções de cloud computing, big data, inteligência artificial e
-                análise de dados, entre outras. Seu portfólio atende a diversos setores, como finanças,
-                manufatura, logística, varejo e recursos humanos, impactando positivamente a maneira
-                como as empresas gerenciam suas operações e entregam valor aos seus clientes.</p><br><br>
+                <p>Com presença em mais de 180 países, a SAP transforma a maneira como as organizações
+                    operam ao fornecer soluções de cloud computing, big data, inteligência artificial e
+                    análise de dados, entre outras. Seu portfólio atende a diversos setores, como finanças,
+                    manufatura, logística, varejo e recursos humanos, impactando positivamente a maneira
+                    como as empresas gerenciam suas operações e entregam valor aos seus clientes.</p><br><br>
 
-            <b>Sustentabilidade na SAP: </b><br><br>
+                <b>Sustentabilidade na SAP: </b><br><br>
 
-            <p>A SAP tem uma forte estratégia de sustentabilidade que é integrada em suas operações e
-                no desenvolvimento de suas soluções. A empresa busca reduzir sua pegada de carbono e apoiar
-                os negócios na implementação de práticas ambientais mais eficientes. A SAP se comprometeu
-                com a neutralidade de carbono até 2030, o que significa que todas as suas operações globais,
-                incluindo centros de dados e escritórios, serão sustentáveis e livres de emissões líquidas de CO2.</p>
-            <br><br>
+                <p>A SAP tem uma forte estratégia de sustentabilidade que é integrada em suas operações e
+                    no desenvolvimento de suas soluções. A empresa busca reduzir sua pegada de carbono e apoiar
+                    os negócios na implementação de práticas ambientais mais eficientes. A SAP se comprometeu
+                    com a neutralidade de carbono até 2030, o que significa que todas as suas operações globais,
+                    incluindo centros de dados e escritórios, serão sustentáveis e livres de emissões líquidas de CO2.</p>
+                <br><br>
 
-            <b>Créditos de Carbono:</b><br><br>
+                <b>Créditos de Carbono:</b><br><br>
 
-            <p>A SAP participa ativamente do mercado de créditos de carbono, investindo em projetos de
-                compensação que ajudam a reduzir a emissão de gases de efeito estufa em nível global. Esses
-                projetos incluem a preservação de florestas tropicais e a implementação de tecnologias verdes,
-                como fontes de energia renováveis e sistemas de eficiência energética.</p><br><br>
+                <p>A SAP participa ativamente do mercado de créditos de carbono, investindo em projetos de
+                    compensação que ajudam a reduzir a emissão de gases de efeito estufa em nível global. Esses
+                    projetos incluem a preservação de florestas tropicais e a implementação de tecnologias verdes,
+                    como fontes de energia renováveis e sistemas de eficiência energética.</p><br>
 
-            <p>A SAP também auxilia seus clientes a integrar créditos de carbono em suas próprias operações,
-                ajudando-os a se tornarem mais sustentáveis por meio de suas soluções empresariais. A empresa
-                promove a digitalização de processos que ajudam a reduzir desperdícios, otimizar o uso de
-                recursos e diminuir os impactos ambientais.</p><br><br>
+                <p>A SAP também auxilia seus clientes a integrar créditos de carbono em suas próprias operações,
+                    ajudando-os a se tornarem mais sustentáveis por meio de suas soluções empresariais. A empresa
+                    promove a digitalização de processos que ajudam a reduzir desperdícios, otimizar o uso de
+                    recursos e diminuir os impactos ambientais.</p><br><br>
 
-            <b>Projetos de Sustentabilidade:</b><br><br>
+                <b>Projetos de Sustentabilidade:</b><br><br>
 
-            <p>Além de sua atuação no mercado de créditos de carbono, a SAP está envolvida em diversos projetos
-                de sustentabilidade, como o SAP Forest (um projeto global que promove a plantação de árvores
-                para compensar as emissões de carbono), e iniciativas que incentivam o uso de tecnologias para
-                soluções ambientais, como plataformas para gestão de resíduos e consumo eficiente de energia.</p>
-            <br><br>
+                <p>Além de sua atuação no mercado de créditos de carbono, a SAP está envolvida em diversos projetos
+                    de sustentabilidade, como o SAP Forest (um projeto global que promove a plantação de árvores
+                    para compensar as emissões de carbono), e iniciativas que incentivam o uso de tecnologias para
+                    soluções ambientais, como plataformas para gestão de resíduos e consumo eficiente de energia.</p>
+                <br><br>
 
-            <b>Selo ESG (Environmental, Social, and Governance):</b><br><br>
+                <b>Selo ESG (Environmental, Social, and Governance):</b><br><br>
 
-            <p>A SAP é uma das empresas que carrega com orgulho o selo ESG (Environmental, Social and Governance),
-                que reconhece o compromisso da empresa com práticas responsáveis nos âmbitos ambiental, social e de
-                governança corporativa. A empresa adota políticas rigorosas para garantir que suas operações atendam
-                a padrões éticos e sustentáveis, promovendo um impacto positivo nas comunidades em que atua.</p><br><br>
+                <p>A SAP é uma das empresas que carrega com orgulho o selo ESG (Environmental, Social and Governance),
+                    que reconhece o compromisso da empresa com práticas responsáveis nos âmbitos ambiental, social e de
+                    governança corporativa. A empresa adota políticas rigorosas para garantir que suas operações atendam
+                    a padrões éticos e sustentáveis, promovendo um impacto positivo nas comunidades em que atua.</p><br>
 
-            <p>Com uma abordagem orientada pela sustentabilidade e pelos princípios do ESG, a SAP se empenha em criar
-                um futuro mais sustentável, tanto para seus negócios quanto para a sociedade como um todo.</p>
+                <p>Com uma abordagem orientada pela sustentabilidade e pelos princípios do ESG, a SAP se empenha em criar
+                    um futuro mais sustentável, tanto para seus negócios quanto para a sociedade como um todo.</p>
+            </div>
         </div>
     </main>
     <footer id="rodape">
