--- a/GS/informacaoEmpresa2.html
+++ b/GS/informacaoEmpresa2.html
@@ -110,7 +110,46 @@
                 <input type="text" id="search-input" placeholder="Digite sua busca..." />
                 <button id="search-button">Pesquisar</button>
             </div>    
+            <h3 id="tituloEmpresa">Sobre a Empresa: FIA</h3>
+            <div id="infoEmpresaFIA">
+                <div class="textoEmpresa">
+                    <img src="images/fiaLogo.png" alt="Logo da Fia" class="LogoDaFIA">
+                    <b>Razão Social:</b> Fédération Internationale de l'Automobile (FIA)<br>
+                    <b>E-mail: </b>contact@fia.com<br>
+                    <b>CNPJ: </b>Não se aplica (organização internacional sem sede no Brasil)<br>
+                    <b>Telefone: </b> +41 22 544 4400<br>
+                    <b>Ramo de Atuação: </b>Esportes Automobilísticos e Mobilidade.<br>
+                    <b>Endereço: </b>Chemin de Blandonnet 2, 1214 Vernier, Genebra, Suíça.<br><br>
 
+                    <b>Informações Gerais: </b><br><br>
+
+                    <p>A FIA é uma organização internacional fundada em 1904, com o objetivo de supervisionar competições automobilísticas e promover melhorias na mobilidade global. Representa clubes de automobilismo e mobilidade em mais de 140 países. É a entidade responsável pela regulamentação de competições como a Fórmula 1, WRC (Rali) e Fórmula E.</p><br>
+
+                    <p>Além dos esportes, a FIA lidera iniciativas para a segurança no trânsito e o desenvolvimento de tecnologias de mobilidade sustentável. Suas diretrizes são centradas em reduzir o impacto ambiental, promovendo um transporte mais seguro e eficiente.</p><br><br>
+
+                    <b>Sustentabilidade na FIA: </b><br><br>
+
+                    <p>A FIA tem planos ambiciosos de sustentabilidade, incluindo a descarbonização total da Fórmula 1 até 2030. Para alcançar essa meta, está transformando o esporte com o uso de combustíveis sustentáveis, melhorias logísticas e iniciativas de eficiência energética. O objetivo é continuar promovendo a emoção das corridas enquanto reduz a pegada de carbono do esporte.</p>
+                    <br><br>
+
+                    <b>Créditos de Carbono:</b><br><br>
+
+                    <p>A FIA investe em projetos de compensação de carbono e promove a economia circular, como práticas de reciclagem e reaproveitamento de materiais nos Grandes Prêmios. Por exemplo, eventos como o GP de São Paulo reciclam resíduos orgânicos para transformá-los em fertilizantes e promovem tecnologias inovadoras para evitar emissões desnecessárias.</p><br><br>
+
+                    <b>Projetos de Sustentabilidade:</b><br><br>
+
+                    Entre as ações destacam-se:<br><br>
+
+                    <p>• A Fórmula E, totalmente elétrica, que testa tecnologias de ponta para mobilidade sustentável.</p>
+                    <p>• O desenvolvimento de combustíveis 100% sustentáveis para a Fórmula 1.</p>
+                    <p>• Parcerias com empresas que priorizam práticas ambientais responsáveis durante os eventos, como tratamento local de resíduos e economia de recursos.</p>
+                    <br><br>
+
+                    <b>Selo ESG (Environmental, Social, and Governance):</b><br><br>
+
+                    <p>A FIA adota os princípios ESG em suas operações, promovendo governança transparente, responsabilidade ambiental e inclusão social. Essa abordagem é essencial para equilibrar as demandas esportivas com as preocupações globais de sustentabilidade e impacto social.</p>
+                </div>
+            </div>
         </main>
         <footer id="rodape">
             <div class="conteudoRodape">
