--- a/GS/informacaoEmpresa3.html
+++ b/GS/informacaoEmpresa3.html
@@ -109,8 +109,40 @@
             <div id="search-container">
                 <input type="text" id="search-input" placeholder="Digite sua busca..." />
                 <button id="search-button">Pesquisar</button>
-            </div>    
+            </div>
+            <h3 id="tituloEmpresa">Sobre a Empresa: Ultragaz</h3>    
+            <div id="infoEmpresaUltragaz">
+                <div class="textoEmpresa">
+                    <img src="images/ultragasLogo.png" alt="Logo da Ultragaz" class="LogoDaUltragaz">
+                    <b>Razão Social:</b> Ultragaz S.A.<br>
+                    <b>E-mail: </b>sac@ultragaz.com.br<br>
+                    <b>CNPJ: </b>61.602.113/0001-75<br>
+                    <b>Telefone: </b> 0800 701 1234<br>
+                    <b>Ramo de Atuação: </b>Distribuição e comercialização de gás liquefeito de petróleo (GLP).<br>
+                    <b>Endereço: </b>Avenida Brigadeiro Luís Antônio, 1343, São Paulo, SP, Brasil.<br><br>
 
+                    <b>Informações Gerais: </b><br><br>
+
+                    <p>A Ultragaz é pioneira no mercado brasileiro de gás GLP, com mais de 85 anos de atuação. Atendendo tanto o consumidor residencial quanto negócios, como padarias e restaurantes, a empresa é reconhecida pela inovação e sua extensa rede de revendas. Além do atendimento ao consumidor final, a Ultragaz também atua com soluções de energia para a indústria e agronegócio, reforçando seu papel estratégico na economia brasileira.</p><br><br>
+
+                    <b>Sustentabilidade na Ultragaz: </b><br><br>
+
+                    <p>A Ultragaz investe fortemente em práticas sustentáveis, incluindo a criação de programas voltados à redução do impacto ambiental, como o uso de combustíveis mais limpos. A empresa também promove iniciativas sociais e ambientais em comunidades carentes, envolvendo funcionários e revendedores em programas educativos e de conscientização sobre sustentabilidade e reaproveitamento de recursos.</p><br><br>
+
+                    <b>Créditos de Carbono:</b><br><br>
+
+                    <p>A Ultragaz está alinhada com os esforços de transição energética, investindo em tecnologias que visam reduzir emissões de gases de efeito estufa. A empresa também promove a compensação de carbono por meio de iniciativas de preservação ambiental, como o apoio a projetos de eficiência energética e manejo sustentável.</p><br><br>
+
+                    <b>Projetos de Sustentabilidade:</b><br><br>
+
+                    <p>A Ultragaz lidera mais de 30 projetos socioambientais, destacando-se o programa "Junto Óleo", que coleta óleo de cozinha usado para reciclagem, e a "Carreta Itinerante", que leva treinamento profissional para comunidades remotas. Essas iniciativas geram impacto positivo ao combinar educação ambiental com desenvolvimento social, engajando tanto funcionários quanto comunidades locais.</p>
+                    <br><br>
+
+                    <b>Selo ESG (Environmental, Social, and Governance):</b><br><br>
+
+                    <p>A Ultragaz é comprometida com princípios ESG, integrando governança responsável, práticas ambientais inovadoras e impacto social positivo em suas operações. Com forte transparência, a empresa reforça seu papel como agente de transformação para um futuro mais sustentável, alinhado às expectativas de consumidores e investidores responsáveis.</p>
+                </div>
+            </div>
         </main>
         <footer id="rodape">
             <div class="conteudoRodape">
