--- a/GS/informacaoEmpresa2.html
+++ b/GS/informacaoEmpresa2.html
@@ -114,7 +114,7 @@
             <div id="infoEmpresaFIA">
                 <div class="textoEmpresa">
                     <img src="images/fiaLogo.png" alt="Logo da Fia" class="LogoDaFIA">
-                    <b>Razão Social:</b> Fédération Internationale de l'Automobile (FIA)<br>
+                    <b>Razão Social:</b> Federação Internacional de Automobilística de Fórmula E (FIA)<br>
                     <b>E-mail: </b>contact@fia.com<br>
                     <b>CNPJ: </b>Não se aplica (organização internacional sem sede no Brasil)<br>
                     <b>Telefone: </b> +41 22 544 4400<br>
