--- a/GS/cadastrarCampanhas.html
+++ b/GS/cadastrarCampanhas.html
@@ -152,7 +152,7 @@
                         <input type="text" name="txtMeta" id="txtMeta">
                     </div>                    
                     <div id="divBotaoCadastro">
-                        <button type="button" class="botaoCadastro" onclick="validar()">Cadastrar Campanha</button>
+                        <button type="button" class="botaoCadastro" onclick="validarCadastroCampanha()">Cadastrar Campanha</button>
                     </div>                    
                 </div>
             </div>
