--- a/GS/cadastrarDoador.html
+++ b/GS/cadastrarDoador.html
@@ -168,8 +168,7 @@
                     </div>                    
                     <div id="divBotaoCadastro">
                         <input type="reset" value="Limpar" class="botaoLimpar">
-                        <button type="button" onclick="validar()" class="botaoCadastro">Enviar</button>
-                    </div>                    
+                        <button type="button" class="botaoCadastro" onclick="validarCadastroDoador()">Enviar</button>                   
                     </div>
                 </div>
             </div>
