--- a/GS/verPerfil.html
+++ b/GS/verPerfil.html
@@ -110,7 +110,59 @@
                 <input type="text" id="search-input" placeholder="Digite sua busca..." />
                 <button id="search-button">Pesquisar</button>
             </div>    
+            <h3>Seu Perfil</h3>
+            <div id="perfilBarbara">
+                <div id="suaFotoPerfil">
+                    <img src="images/integrantes_barbara.png" alt="Imagem Perfil de Bárbara" id="ImagemBarbara">
+                </div>
+                <div id="informacoesBarbara">
+                    <b>Nome Completo:</b> Bárbara Bonome Filipus<br>
+                    <b>E-mail:</b> barbarabonome@gmail.com<br>
+                    <b>CPF:</b> 123.456.789.10<br>
+                    <b>Telefone:</b> (11)99876-5432<br>
+                    <b>Endereço:</b> Av. Paulista, 10<br>
+                    <b>Usuário:</b> @barbarabonome<br>
+                    <button type="button" class="atualizarCadastro" onclick="window.location.href='atualizarCadastro.html'">Atualizar Cadastro</button>
 
+            </div>
+            <fieldset class="campanhasDoadas">
+                <h4 id="suasDoacoes">Campanhas que você doou:</h4>
+                <div id="campanhasPerfil">
+                    <div class="campanhaHome">
+                        <img src="images/campanha1.png" alt="Logo da Campanha 1" id="campanhaHome1">
+                        <div class="nomeOrganizacao"><b>Organização:</b> SAP</div>
+                        <div class="tipoEnergia"><b>Tipo de Energia:</b> Solar</div>
+                        <p class="descricaoCampanhaHome">A SAP lança o projeto SolarTech Initiative, uma campanha dedicada a implementar sistemas de energia solar em pequenas
+                            e médias empresas ao redor do mundo. Este projeto visa reduzir a pegada de carbono das empresas e promover a adoção
+                            de práticas sustentáveis no setor corporativo.</p>
+                        <div class="metaHome1"><b>Meta: R$350.000</b></div>
+                        <progress value="60" max="100"></progress>
+                        <div class="numero-progresso1">60%</div>
+                    </div>
+                    <div class="campanhaHome">
+                        <img src="images/campanha2.png" alt="Logo da Campanha 2" id="campanhaHome2">
+                        <div class="nomeOrganizacao"><b>Organização:</b> FIA</div>
+                        <div class="tipoEnergia"><b>Tipo de Energia:</b> Eólica</div>
+                        <p class="descricaoCampanhaHome">A FIA apresenta a campanha E-Racing Green Circuit, um projeto inovador para criar pistas de corrida sustentáveis
+                            alimentadas por energia eólica. O objetivo é reduzir as emissões de carbono dos eventos de corrida e promover a
+                            energia limpa no esporte automobilístico.</p>
+                        <div class="metaHome2"><b>Meta: R$300.000</b></div>
+                        <progress value="30" max="100"></progress>
+                        <div class="numero-progresso2">30%</div>
+                    </div>
+                    <div class="campanhaHome">
+                        <img src="images/campanha3.png" alt="Logo da Campanha 3" id="campanhaHome3">
+                        <div class="nomeOrganizacao"><b>Organização:</b> Ultragaz</div>
+                        <div class="tipoEnergia"><b>Tipo de Energia:</b> Biogás</div>
+                        <p class="descricaoCampanhaHome">A Ultragaz apresenta a campanha BioGas for All, um projeto que visa expandir o uso do biogás como fonte de energia
+                            para residências e indústrias. Esta iniciativa busca aproveitar resíduos orgânicos para gerar energia limpa e
+                            acessível.</p>
+                        <div class="metaHome3"><b>Meta: R$200.000</b></div>
+                        <progress value="70" max="100"></progress>
+                        <div class="numero-progresso3">70%</div>    
+                    </div>
+                </div>
+            </fieldset>
         </main>
         <footer id="rodape">
             <div class="conteudoRodape">
