--- a/GS/cadastrarOrganizador.html
+++ b/GS/cadastrarOrganizador.html
@@ -173,7 +173,7 @@
                     </div>                    
                     <div id="divBotaoCadastro">
                         <input type="reset" value="Limpar" class="botaoLimpar">
-                        <button type="button" onclick="validar()" class="botaoCadastro">Enviar</button>
+                        <button type="button" onclick="validarCadastroOrganizacao()" class="botaoCadastro">Enviar</button>
                     </div>
                 </div>
             </div>
