--- a/GS/integrantes.html
+++ b/GS/integrantes.html
@@ -114,8 +114,8 @@
         <div class="integrante">
             <img src="images/integrantes_barbara.png" alt="integrante1" class="integranteImagem">
             <div class="integrante-info">
-                <p><b>Bárbara Bonome Filipus</b></p>
-                <p><b>RM:</b> 560431 <b>|</b> 1TDSPA-2024</p>
+                <div><b>Bárbara Bonome Filipus</b></div>
+                <div><b>RM:</b> 560431 <b>|</b> 1TDSPA-2024</div>
                 <a href="https://linkedin.com/in/barbarabonomef" target="_blank" class="botaoLinkedin">
                     <img src="images/linkedin.png" alt="LinkedIn" class="botaoIconeL">
                 </a>
@@ -124,8 +124,8 @@
         <div class="integrante">
             <img src="images/integrantes_beatriz.png" alt="integrante1" class="integranteImagem">
             <div class="integrante-info">
-                <p><b>Beatriz Bortolai Lourenço</b></p>
-                <p><b>RM:</b> 560186 <b>|</b> 1TDSPA-2024</p>
+                <div><b>Beatriz Bortolai Lourenço</b></div>
+                <div><b>RM:</b> 560186 <b>|</b> 1TDSPA-2024</div>
                 <a href="http://linkedin.com/in/beatriz-bortolai" target="_blank" class="botaoLinkedin">
                     <img src="images/linkedin.png" alt="LinkedIn" class="botaoIconeL">
                 </a>
@@ -134,8 +134,8 @@
         <div class="integrante">
             <img src="images/integrantes_vinicius.png" alt="integrante1" class="integranteImagem">
             <div class="integrante-info">
-                <p><b>Vinicius Lira Ruggeri</b></p>
-                <p><b>RM:</b> 560593 <b>|</b> 1TDSPA-2024</p>
+                <div><b>Vinicius Lira Ruggeri</b></div>
+                <div><b>RM:</b> 560593 <b>|</b> 1TDSPA-2024</div>
                 <a href="https://www.linkedin.com/in/viniruggeri" target="_blank" class="botaoLinkedin">
                     <img src="images/linkedin.png" alt="LinkedIn" class="botaoIconeL">
                 </a>                
