--- a/GS/integrantes.html
+++ b/GS/integrantes.html
@@ -141,7 +141,7 @@
                 </a>                
             </div>        
         </div>
-        <a href="https://github.com/Acessi/Sprint-1-Front.git" target="_blank" id="botaoGitHub">
+        <a href="https://github.com/ProjetoSementinha/Front-End" target="_blank" id="botaoGitHub">
             <img src="images/github.png" alt="GitHub" id="botaoIconeG">
             <p><b>GitHub</b></p>
         </a>        
