--- a/GS/verPerfil.html
+++ b/GS/verPerfil.html
@@ -126,7 +126,7 @@
 
             </div>
             <fieldset class="campanhasDoadas">
-                <h4 id="suasDoacoes">Campanhas que você doou:</h4>
+                <h4 id="suasDoacoes">Campanhas que você Apoiou:</h4>
                 <div id="campanhasPerfil">
                     <div class="campanhaHome">
                         <img src="images/campanha1.png" alt="Logo da Campanha 1" id="campanhaHome1">
